<resources>
    <string name="app_name">My Application</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_explore">Explore</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_profile">Profile</string>
    <string name="title_register">Register</string>
    <string name="title_chkIn">Check In</string>
    <string name="title_chkOut">Check Out</string>
    <string name="title_edCity">City</string>
    <string name="title_search">Search</string>
    <string name="title_reviews">%1$i Reviews</string>
    <string name="title_price">Price:</string>
    <string name="title_login">Login</string>
    <string name="title_already">Have an account?</string>
    <string name="title_create">Create an account?</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="title_password_reset">Forgot your password?</string>
    <string name="title_have_account">You do not have an account?</string>
    <string name="title_sign_up">Sign up</string>
    <string name="title_name">Name</string>
    <string name="title_surnames">Surname</string>
    <string name="title_condition">I do not want to receive travel tips or promotions</string>
    <string name="title_country">Country</string>
    <string name="title_birth">Birth date</string>
    <string name="title_welcome">Welcome!</string>
    <string name="title_logout">Log out</string>
    <string name="title_user_logged">User logged: </string>
    <string name="title_password_indications">The password must contain eight characters, at least one lowercase letter and one special character (@$!.%*?&amp;) example: Abcd7498?* (The order of the characters does not affect).</string>
    <string name="user_created">User created successfully, please log in</string>
    <string name="user_not_created">The user could not be created, please verify your data</string>
    <string name="user_not_exists">The selected user does not exist</string>
    <string name="conn_failed">The connection with the server has failed</string>
    <string name="title_duration">Duration:</string>
    <string name="price">$</string>
    <string name="reviews">reviews</string>
    <string name="hours">hours</string>
</resources>